--- a/index.html
+++ b/index.html
@@ -3,88 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>Exemplo Flexbox</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+        .container {
             display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            gap: 10px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-
-        main {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
+            justify-content: space-around;
             align-items: center;
-            padding: 20px;
+            height: 100vh;
         }
 
-        section {
-            width: 80%;
-            max-width: 800px;
-            margin-bottom: 20px;
-        }
-
-        footer {
+        .item {
             background-color: #4CAF50;
             color: white;
+            padding: 20px;
             text-align: center;
-            padding: 10px;
+            margin: 5px;
+            flex: 1;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Bem-vindo à Minha Página</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>Esta é a seção inicial da página.</p>
-        </section>
-        <section id="sobre">
-            <h2>Sobre</h2>
-            <p>Informações sobre o propósito da página.</p>
-        </section>
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Informações de contato.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Minha Página. Todos os direitos reservados.</p>
-    </footer>
+    <div class="container">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+    </div>
 </body>
 </html>
